# test_steer

./: .gitignore  main.py  pyproject.toml
data_generation/: README.md  prompts.py
data_generation/personas/: gym_bro.json  left_leaning.json  naive_friend.json  right_leaning.json  shy_nerd.json
evaluation/: configs.py  evaluate.py  steering.py  test_gating.py  tune_alpha.py
extracted/: gym_bro.pt  left_leaning.pt  naive_friend.pt  right_leaning.pt
scripts/: steer_and_test.py  steer_using_vec.py
src/steer_analysis/: README.md  analyze.py  config.py  extract.py  utils.py
